# Video-Curation

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: augmentation.yaml  curation.yaml  training.yaml
deploy/: ray-cluster.yaml
notebooks/: 01_data_exploration.ipynb  02_curation_analysis.ipynb  03_ablation_results.ipynb  04_cv_fundamentals.ipynb  05_generative_augmentation.ipynb
scripts/: compare_dedup_methods.py  download_data.py  export_for_generation.py  ray_scaling_benchmark.py  run_augmentation.py  run_bias_analysis.py  run_curation.py  run_evaluation.py  run_multitask_annotation.py  run_training.py
src/video_curation/: __init__.py
src/video_curation/augmentation/: augmentor.py  caption_augmentation.py  color_jitter.py  frame_interpolation.py  generative_synthesis.py  speed_variation.py
src/video_curation/curation/: deduplication.py  motion_score.py  multitask_annotator.py  quality_filter.py  scene_detect.py
src/video_curation/data/: dataset.py  downloader.py
src/video_curation/evaluation/: bias_analysis.py  clip_eval.py  fvd.py  runner.py
src/video_curation/pipeline/: curator.py  ray_pipeline.py
src/video_curation/training/: data_mixture.py  finetune.py
tests/: test_curation.py
